--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,9 @@
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#135661" />
+		<meta property="og:image" content="https://days-until.michaelbonner.dev/og-image.jpg" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
 		%sveltekit.head%
 	</head>
 	<body>
