--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,7 @@
 		<meta property="og:image" content="https://days-until.michaelbonner.dev/og-image.jpg" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
+		<meta property="og:type" content="website" />
 		<meta name="color-scheme" content="light only" />
 		%sveltekit.head%
 	</head>
